--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@ $(document).ready(function()
 <div id="wb_Breadcrumb2" style="display:inline-block;width:100%;z-index:0;vertical-align:top;">
 <ul id="Breadcrumb2">
 <li><a href="http://"> HOME</a></li>
-<li><a href="http://">RESEARCH</a></li>
-<li><a href="http://">TEACHING</a></li>
-<li><a href="http://">CV</a></li>
+<li><a href="./Research.html">RESEARCH</a></li>
+<li><a href="./Golnoush Rahimzadeh - CV.pdf" title="Curriculum vitae">CV</a></li>
 </ul>
 
 </div>
