--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@ $(document).ready(function()
 <div class="col-2">
 <div id="wb_Breadcrumb2" style="display:inline-block;width:100%;z-index:0;vertical-align:top;">
 <ul id="Breadcrumb2">
-<li><a href="http://"> HOME</a></li>
+<li class="active" aria-current="page"> HOME</li>
 <li><a href="./Research.html">RESEARCH</a></li>
 <li><a href="./Golnoush Rahimzadeh - CV.pdf" title="Curriculum vitae">CV</a></li>
+<li><a href="./Teaching.html" title="Teaching">TEACHING</a></li>
 </ul>
 
 </div>
