--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@ $(document).ready(function()
 <p style="color:#000000;"><span style="color:#000000;">Contact:</span></p>
 <p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; golnoush.rahimzadeh@gmail.com</span></p>
 <p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; grahimzadeh1@student.gsu.edu</span></p>
-<p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; +1 (252) 4128584</span></p>
+<p style="margin:0px 0px 0px 48px;color:#000000;"><span style="color:#000000;">+61 (401) 313431</span></p>
+<p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; +1&nbsp;&nbsp; (252) 4128584</span></p>
 <p>&nbsp;</p>
 </div>
 </div>
@@ -96,9 +97,9 @@ $(document).ready(function()
 </div>
 </div>
 </div>
-<div id="PageFooter2" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1133px;width:100%;height:12px;z-index:12;">
+<div id="PageFooter1" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1118px;width:100%;height:27px;z-index:12;">
 </div>
-<div id="PageFooter1" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1118px;width:100%;height:27px;z-index:13;">
+<div id="PageFooter2" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1133px;width:100%;height:12px;z-index:13;">
 </div>
 </body>
 </html>
