--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ $(document).ready(function()
 <div class="row">
 <div class="col-1">
 <div class="col-1-padding">
-<div id="wb_Image1" style="display:inline-block;width:359px;height:268px;z-index:1;">
-<img src="images/New Orleans 053.JPG" id="Image1" alt="">
+<div id="wb_Image1" style="display:inline-block;width:224px;height:395px;z-index:1;">
+<img src="images/Sydney_Resized.jpg" id="Image1" alt="">
 </div>
 </div>
 </div>
@@ -97,9 +97,9 @@ $(document).ready(function()
 </div>
 </div>
 </div>
-<div id="PageFooter2" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1133px;width:100%;height:12px;z-index:12;">
+<div id="PageFooter1" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1118px;width:100%;height:27px;z-index:12;">
 </div>
-<div id="PageFooter1" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1118px;width:100%;height:27px;z-index:13;">
+<div id="PageFooter2" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1133px;width:100%;height:12px;z-index:13;">
 </div>
 </body>
 </html>
