--- a/Research.html
+++ b/Research.html
@@ -9,7 +9,7 @@
 <link href="Research.css" rel="stylesheet">
 </head>
 <body>
-<a href="http://www.wysiwygwebbuilder.com" target="_blank"><img src="images/builtwithwwb15.png" alt="WYSIWYG Web Builder" style="position:absolute;left:428px;top:1653px;margin: 0;border-width:0;z-index:250"></a>
+<a href="http://www.wysiwygwebbuilder.com" target="_blank"><img src="images/builtwithwwb15.png" alt="WYSIWYG Web Builder" style="position:absolute;left:125px;top:17px;margin: 0;border-width:0;z-index:250"></a>
 <div id="wb_LayoutGrid2">
 <div id="LayoutGrid2">
 <div class="row">
@@ -31,7 +31,7 @@
 </div>
 </div>
 </div>
-<div id="wb_Text1" style="position:absolute;left:125px;top:126px;width:695px;height:1288px;text-align:justify;z-index:3;">
+<div id="wb_Text1" style="position:absolute;left:125px;top:126px;width:695px;height:1860px;text-align:justify;z-index:3;">
 <p style="font-family:Arial;color:#000000;"><span style="font-family:Times New Roman;color:#000000;">My research is mostly focused on Public Policy Issues. I utilize different applied economics methods and economics theory to analyze the variations in the data. In particular, I use and develop econometric methods to analyze the urban planning problems, program evaluation, and changes in welfare by quantifying the willingness to pay for different policies. </span></p>
 <p style="font-family:Arial;">&nbsp;</p>
 <p style="font-family:Arial;font-size:17px;line-height:20px;font-weight:bold;font-style:italic;color:#000000;"><span style="text-decoration:underline;color:#000000;">Job Market Paper: </span></p>
@@ -59,6 +59,13 @@
 <p style="font-size:15px;line-height:16.5px;">The High temperature in the urban area increases the demand for air conditioning, and as a result, enlarge energy consumption, One of the most simple ways to cool the cities is the planting of urban vegetation. For this reason and many other benefits of trees, many urban tree planting has been implemented in different cities in the United States by non-profit organizations and public agencies. One of the most successful programs is the Tree Shade Program by Sacramento Municipal Utility District(SMUD). This study causally estimates the impact of this program on energy consumption. SMUD provides trees only for eligible residents with a specific required lot(i.e., usable space in south and west of the building). I will exploit this regulation to have an exogenous source of variation between residents.</p>
 <p style="font-size:15px;line-height:16.5px;">&nbsp;</p>
 <p style="font-family:Arial;font-size:17px;line-height:20px;font-weight:bold;font-style:italic;color:#000000;"><span style="text-decoration:underline;color:#000000;">Public Policy: </span></p>
+<p style="font-family:Arial;font-size:17px;line-height:20px;font-weight:bold;font-style:italic;">&nbsp;</p>
+<p style="font-size:16px;line-height:18px;font-weight:bold;">The Role of Labor Unions in Response to Pandemics: The case of COVID-19 [<a href="https://www.cepar.edu.au/publications/working-papers/role-labor-unions-response-pandemics-case-covid-19">Paper</a>]</p>
+<p style="font-size:16px;line-height:18px;font-weight:bold;">&nbsp;</p>
+<p style="font-size:15px;line-height:16.5px;">Labor unions are among the largest institutions in the United States, and their role in regulating employee–employer relations is hard to ignore. Costly efforts to control the spread of COVID-19 (i.e., decreasing economic activity and increasing workplace safety measures), combined with the monopoly and collective voice faces of unions, emphasize the role unions can play in shaping the response of the workforce in coping with COVID-19. We analyze the effect of union size by utilizing state-level data in the United States and by employing a nonlinear probability model and general method of moments estimation. The results suggest new evidence of positive externalities for union employees compared with nonunion employees. We find that a 10% increase in unionization in the United States would lead to around 5% decrease in total cases of COVID-19 100 days after the onset of the virus, controlling for hours of work and differences in union members’ characteristics.</p>
+<p style="font-size:15px;line-height:16.5px;">&nbsp;</p>
+<p style="font-size:15px;line-height:16.5px;">&nbsp;</p>
+<p style="font-family:Calibri;font-size:17px;line-height:21px;font-weight:bold;font-style:italic;color:#000000;"><span style="font-family:Arial;font-size:13px;line-height:16px;font-weight:normal;font-style:normal;color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; </span><img alt="" width="477" height="338" src="images/Text11.png"></p>
 <p style="font-family:Calibri;font-size:17px;line-height:21px;font-weight:bold;font-style:italic;">&nbsp;</p>
 <p style="font-size:16px;line-height:18px;font-weight:bold;">The Provision of Environmental Amenities: what can we learn about constituent preferences from legislative voters?</p>
 <p style="font-size:16px;line-height:18px;font-weight:bold;">&nbsp;</p>
