--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@ $(document).ready(function()
 <p style="color:#000000;"><span style="color:#000000;">Andrew Young School of Policy Studies</span></p>
 <p style="color:#000000;"><span style="color:#000000;">Georgia State University</span></p>
 <p>&nbsp;</p>
-<p style="color:#000000;"><span style="color:#000000;">Interests: Environmental Economics, </span></p>
-<p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Applied Micro, </span></p>
-<p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Microeconomics Theory </span></p>
+<p style="color:#000000;"><span style="color:#000000;">Interests: Public Economics,</span></p>
+<p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Applied Micro,</span></p>
+<p style="color:#000000;"><span style="color:#000000;">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; Applied Econometrics</span></p>
 <p>&nbsp;</p>
 <p style="color:#000000;"><span style="color:#000000;">Adviser:&nbsp;&nbsp; Spencer Banzhaf</span></p>
 <p>&nbsp;</p>
@@ -97,9 +97,9 @@ $(document).ready(function()
 </div>
 </div>
 </div>
-<div id="PageFooter2" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1133px;width:100%;height:12px;z-index:12;">
+<div id="PageFooter1" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1118px;width:100%;height:27px;z-index:12;">
 </div>
-<div id="PageFooter1" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1118px;width:100%;height:27px;z-index:13;">
+<div id="PageFooter2" style="position:absolute;overflow:hidden;text-align:left;left:0px;top:1133px;width:100%;height:12px;z-index:13;">
 </div>
 </body>
 </html>
